@@ -1,6 +1,16 @@
 2006-10-03  Thomas Schwinge  <tschwinge@gnu.org>
 
 	[task #5941 --- ``Linker script for GNU Mach'']
+
+	* Makefile.in (kernel.o): Remove `$(systype)-objfiles-prepend' hackery.
+	* i386/Makefile.in (sysdep.a): Likewise.
+	* i386/Makerules.in: Likewise.
+	(LDFLAGS-kernel): Point to the linker script.
+	* i386/i386at/boothdr.S (_start): Don't put into `.text', but into
+	`.text.start' instead.
+	* i386/ldscript: Change to put `.text' at 0x100000 and put
+	`.text.start' first into `.text'.
+
 	* i386/ldscript: New file, copied from `/lib/ldscripts/elf_i386.x' of a
 	GNU Binutils 2.16.1 installation.
 
